--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://myaryhin0201.github.io/project-",
+  "homepage": "https://myaryhin0201.github.io/project-/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/myaryhin0201/parcel-project-template.git"
+    "url": "git+https://github.com/myaryhin0201/project-.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/myaryhin0201/parcel-project-template/issues"
+    "url": "https://github.com/myaryhin0201/project-/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
