--- a/package.json
+++ b/package.json
@@ -23,7 +23,25 @@
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-custom-dist-structure": "^1.1.16",
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
+  },
+  "customDistStructure": {
+    "config": {
+      ".js": "js",
+      ".js.map": "js",
+      ".css": "css",
+      ".css.map": "css",
+      "images": [
+        ".jpg",
+        ".png",
+        ".wepb",
+        ".svg"
+      ]
+    },
+    "options": {
+      "development": true
+    }
   }
 }
