--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "parcel-bundler": "^1.12.4",
     "posthtml-include": "^1.4.3",
     "sass": "^1.26.9"
+  },
+  "dependencies": {
+    "slick-carousel": "^1.8.1"
   }
 }
