--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://myaryhin0201.github.io/project-ice13/",
+  "homepage": "https://yarymaks.github.io/landing-iceStore/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
-    "predeploy": "npm run build -- --public-url=/project-ice13/",
+    "predeploy": "npm run build -- --public-url=/landing-iceStore/",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/myaryhin0201/project-ice13.git"
+    "url": "git+https://yarymaks.github.io/landing-iceStore.git"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
